# dt4h-annotation-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_ner.py  test_api.py  test_init.py
app/: __init__.py  config.py
app/model_manager/: __init__.py  __main__.py  default_registry.yaml  downloader.py  resolver.py
app/src/: pipelines.py
app/src/format/: __init__.py  base.py  data_structures.py  dt4h.py  passthrough.py
app/src/negation/: negation_utils.py
app/src/nel/: __init__.py  biencoder.py  bm25.py  fuzzy_match.py  lookup.py
app/src/ner/: __init__.py  encoder_inference_v1.py  encoder_inference_v2.py
app/utils/: download_model.py  model_utils.py  results_postprocessing.py  text_preprocessing.py
