[project]
name = "ner-linking-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flashtext>=2.7",
    "flask>=3.1.3",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
